# tdda

./: .gitignore  Dockerfile  NOTES.md  pyproject.toml  requirements.txt  results.tdda  setup.py  ydata.py
.github/workflows/: build.yml
junit/: test-results.xml
tdda/referencetest/testgentest/: test_gentest.py
